<resources>
    <string name="app_name">榴菱丝视频</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_register">登录/注册</string>

    <string name="login_by_password">密码登录</string>
    <string name="register_by_verify_code">账号注册</string>
    <string name="phone_number"> 手机号码: </string>
    <string name="input_phone_number">请输入 手机号码</string>
    <string name="login_password"> 登录密码: </string>
    <string name="input_password">请输入密码</string>
    <string name="forget_password"> 忘记密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登&#160; &#160; &#160; 录</string>
    <string name="register">注&#160; &#160; &#160; 册</string>
    <string name="input_new_password"> &#160; &#160; &#160;新密码: </string>
    <string name="input_new_password_hint">请输入新密码</string>
    <string name="confirm_new_password"> 确认新密码: </string>
    <string name="input_new_password_again">请再次输入新密码</string>
    <string name="verify_code">&#160; &#160; 验证码: </string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="get_verifycode">获取验证码</string>
    <string name="done">确&#160; &#160; &#160; 定</string>
    <string name="nickname">&#160; &#160; &#160; &#160; &#160; 昵称: </string>
    <string name="input_nickname">请输入昵称</string>
    <string name="likes">点赞</string>
    <string name="star">收藏</string>
    <string name="likesNum">点赞数</string>
    <string name="starNum">收藏数</string>

</resources>